[package]
authors = ["David Weis <davidmichaelweis@gmail.com>"]
description = "Face tracker"
edition = "2021"
license = "MIT OR APACHE"
name = "face-tracker"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/face-tracker"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.2", features = ["derive"]}
thiserror = "1.0"

opencv = "0.86.1"

tokio = {version = "1", features = ["full"]}

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"
